changed design of nav

--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -34,7 +34,9 @@
                     </span>
                 </div>
                 <div class="p-menu">
-                    <i class="bi bi-caret-left p-menubtn"></i>
+                    <!--<i class="bi bi-caret-left p-menubtn"></i>-->
+                    <i class="bi bi-three-dots"></i>
+                    <i class="bi bi-info-circle"></i>
                 </div>
             </div>
             <div class="p-body">
@@ -362,9 +364,6 @@
             <a class="">History</a>
         </div>
     </div>
-    <div class="nav-ad1">
-
-    </div>
     <div class="nav-others">
         <a class="">Requests</a>
         <a class="">Community</a>
@@ -373,6 +372,9 @@
         <a class="">Settings</a>
         <a class="">News</a>
         <a class="">Tutorials</a>
+    </div>
+    <div class="nav-ad1">
+
     </div>
 </nav>
 <div class="posts-cont">
