--- a/OmneFictio.Web/wwwroot/css/postitem.scss
+++ b/OmneFictio.Web/wwwroot/css/postitem.scss
@@ -1,56 +1,73 @@
-
-.post{
+.post {
     width: 100%;
     margin-bottom: 12px;
     background-color: var(--background-color2);
     -webkit-box-shadow: 0px 2px 4px -2px rgb(0 0 0 / 25%);
     -moz-box-shadow: 0px 2px 4px -2px rgb(0 0 0 / 25%);
     box-shadow: 0px 2px 4px -2px rgb(0 0 0 / 25%);
-    &:last-child{
+
+    &:last-child {
         margin-bottom: unset;
     }
 }
-.darkmode .post{
+
+.darkmode .post {
     -webkit-box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 25%);
     -moz-box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 25%);
     box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 25%);
 }
-.post-detail{
+
+.post-detail {
     display: flex;
     flex-direction: column;
-    .p-header{
+
+    .p-header {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: flex-start;
-        .p-title{
+
+        .p-title {
             padding: 10px;
             font-family: 'Josefin Sans', sans-serif;
             font-weight: 600;
-            display: flex;
-            align-items: center;
-            flex-wrap: wrap;
-            a:hover{
-                text-decoration: underline;
+            width: 100%;
+
+            a {
+                display: inline-block;
+
+                &:hover {
+                    text-decoration: underline;
+                }
             }
-            .p-date{
+
+            .p-date {
                 margin-left: 6px;
                 color: var(--text-color2);
                 font-size: 0.7rem;
                 font-family: 'Gudea';
             }
         }
-        .p-menu{
+
+        .p-menu {
             display: flex;
+            align-items: center;
             height: 100%;
             padding: 0 10px;
-            font-size: 2rem;
-            i{
+            font-size: 1.7rem;
+            gap: 10px;
+
+            i {
                 cursor: pointer;
+            }
+
+            .bi-info-circle {
+                font-size: 1.4rem;
             }
         }
     }
-    .p-body{
+
+    .p-body {
         padding: 0 14px;
         font-size: 0.9rem;
         font-family: 'Gudea', sans-serif;
@@ -58,19 +75,22 @@
         display: flex;
         flex-direction: row;
         align-items: flex-start;
-        .p-cover{
+
+        .p-cover {
             flex-shrink: 0;
             padding-right: 14px;
             display: flex;
             align-items: center;
-            img{
+
+            img {
                 max-width: 90px;
                 height: auto;
                 max-height: 140px;
                 border-radius: 4px;
             }
         }
-        span{
+
+        span {
             flex-grow: 1;
             display: -webkit-box;
             -webkit-line-clamp: 7;
@@ -78,38 +98,44 @@
             overflow: hidden;
         }
     }
-    .p-footer{
+
+    .p-footer {
         font-family: 'Itim', cursive;
         display: flex;
         flex-flow: wrap;
         padding: 0 10px 10px;
-        
-        .p-evaluation{
+
+        .p-evaluation {
             display: flex;
             flex-direction: row;
             justify-content: flex-start;
             align-items: center;
             color: var(--text-color2);
-            i{
+
+            i {
                 font-size: 1.2rem;
                 cursor: pointer;
                 transition: color 0.2s ease;
             }
-            .p-likes{
+
+            .p-likes {
                 padding: 0 8px;
             }
-            .p-rate{
+
+            .p-rate {
                 margin-left: 20px;
             }
         }
-        .p-user{
+
+        .p-user {
             display: flex;
             flex-direction: row;
             justify-content: flex-start;
             align-items: center;
             flex-shrink: 0;
             margin-left: auto;
-            .p-username{
+
+            .p-username {
                 font-size: 0.8rem;
                 cursor: pointer;
                 margin-left: 8px;
@@ -118,11 +144,13 @@
                 white-space: nowrap;
                 overflow: hidden;
                 max-width: 180px;
-                &:hover{
+
+                &:hover {
                     text-decoration: underline;
                 }
             }
-            > img{
+
+            >img {
                 height: 1.7rem;
                 width: 1.7rem;
                 border-radius: 50%;
@@ -131,74 +159,87 @@
         }
     }
 }
-.post-menu{
+
+.post-menu {
     display: none; //flex
     flex-direction: row;
-    .pd-details{
+
+    .pd-details {
         flex-grow: 1;
         display: flex;
         flex-direction: column;
         padding: 10px;
-        .pd-heading{
+        color: #5ca264;
+
+        .pd-heading {
+            color: var(--text-color1);
             font-size: 1.1rem;
             font-family: 'Josefin Sans', sans-serif;
             font-weight: 600;
             padding-right: 4px;
             margin-bottom: unset;
         }
-        .pd-value{
+
+        .pd-value {
             font-size: 0.9rem;
             font-family: 'Itim', cursive;
-            color: #d45e24;
         }
-        .pd-tags{
+
+        .pd-tags {
             display: flex;
             flex-wrap: wrap;
             padding: 0 4px;
-            color: #d45e24;
             gap: 6px;
             font-size: 0.7rem;
             font-family: 'Gudea', sans-serif;
         }
-        .pd-series{
+
+        .pd-series {
             display: flex;
             flex-wrap: wrap;
             padding: 0 4px;
-            color: #d45e24;
             gap: 10px;
             font-size: 0.9rem;
             font-family: 'Itim', cursive;
         }
-        > * {
+
+        >* {
             margin-bottom: 8px;
-            &:last-child{
+
+            &:last-child {
                 margin-bottom: unset;
             }
         }
     }
-    .pd-right{
+
+    .pd-right {
         display: flex;
         flex-direction: column;
         flex-shrink: 0;
-        .pd-close{
+
+        .pd-close {
             display: flex;
             justify-content: end;
             padding: 4px 10px;
             font-size: 2rem;
-            i{
+
+            i {
                 cursor: pointer;
             }
         }
-        .pd-actions{
+
+        .pd-actions {
             display: flex;
             flex-direction: column;
             justify-content: center;
             padding: 4px 10px;
-            .pd-saved{
+
+            .pd-saved {
                 background-color: #4A8D5D !important;
                 color: #fff;
             }
-            button{
+
+            button {
                 color: var(--text-color1);
                 border-radius: 20px;
                 background-color: var(--pd-actionbtns-color);
@@ -207,7 +248,8 @@
                 margin-bottom: 8px;
                 padding: 2px 10px;
                 transition: 0.2s ease;
-                &:hover{
+
+                &:hover {
                     background-color: var(--pd-actionbtns-color-hover1);
                 }
             }
