--- a/OmneFictio.Web/wwwroot/css/read.css
+++ b/OmneFictio.Web/wwwroot/css/read.css
@@ -116,17 +116,7 @@ main {
 .nav-cont .nav-primary .np-aboutyou > a:hover {
   background-color: var(--navlink-aboutyou-color-hover);
 }
-.nav-cont .nav-ad1 {
-  background-color: rgb(139, 136, 199);
-  border-radius: 10px;
-  width: 100%;
-  height: 200px;
-  margin-bottom: 12px;
-}
 .nav-cont .nav-others {
-  position: -webkit-sticky; /* Safari & IE */
-  position: sticky;
-  top: 20px;
   background-color: var(--background-color1) !important;
   border-radius: 10px;
   width: 100%;
@@ -135,18 +125,23 @@ main {
   justify-content: space-around;
   gap: 10px;
   padding: 14px;
+  margin-bottom: 12px;
 }
 .nav-cont .nav-others > a {
-  padding: 4px 14px;
-  border-radius: 8px;
-  border: none;
-  outline: none;
-  transition: 0.2s ease;
+  color: var(--text-color1);
   cursor: pointer;
-  background-color: var(--navlink-others-color);
 }
 .nav-cont .nav-others > a:hover {
-  background-color: var(--navlink-others-color-hover);
+  text-decoration: underline;
+}
+.nav-cont .nav-ad1 {
+  position: -webkit-sticky; /* Safari & IE */
+  position: sticky;
+  top: 20px;
+  background-color: rgb(139, 136, 199);
+  border-radius: 10px;
+  width: 100%;
+  height: 200px;
 }
 
 .orderby-cont {
