post new info panel

--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -35,8 +35,35 @@
                 </div>
                 <div class="p-menu">
                     <!--<i class="bi bi-caret-left p-menubtn"></i>-->
-                    <i class="bi bi-three-dots"></i>
-                    <i class="bi bi-info-circle"></i>
+                    <i class="bi bi-three-dots p-menuicon"></i>
+                    <i class="bi bi-info-circle p-infoicon"></i>
+                    <div class="p-info">
+                        <div class="pi-primary">
+                            <span class="pi-type">
+                                Story
+                            </span>
+                            <span class="pi-language">
+                                ENGLISH
+                            </span>
+                            <span class="pi-status">
+                                In-Progress
+                            </span>
+                            <span class="pi-rating">
+                                15+ / M
+                            </span>
+                        </div>
+                        <div class="pi-tags">
+                            <span>Action</span>
+                            <span>Fantasy</span>
+                            <span>Mystery</span>
+                            <span>Nature</span>
+                            <span>Horror</span>
+                        </div>
+                        <div class="pi-series">
+                            <span>Harry Potter</span>
+                            <span>Pirates</span>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="p-body">
@@ -87,13 +114,13 @@
                 </div>
             </div>
         </div>
-        <div class="post-menu">
+        <!--<div class="post-menu">
             <div class="pd-details">
                 <span class="pd-heading">
                     Tags
                 </span>
                 <div class="pd-tags">
-                    <!--<span>Action</span>-->
+                    
                 </div>
                 <div class="pd-type">
                     <span class="pd-heading">Type:</span>
@@ -105,7 +132,7 @@
                     Based on
                 </span>
                 <div class="pd-series">
-                    <!--<span>Pirates of the Caribbean</span>-->
+                    
                 </div>
                 <div class="pd-poststatus">
                     <span class="pd-heading">Status:</span>
@@ -136,7 +163,7 @@
                     <button type="button">Report</button>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
 </template>
 
