--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -75,11 +75,11 @@
                 <button type="button">Share</button>
                 <button type="button">Report</button>
             </div>
-            <div class="pd-items">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
+            <div class="pd-primary">
+                <span class="pd-type"></span>
+                <span class="pd-language"></span>
+                <span class="pd-status"></span>
+                <span class="pd-rating"></span>
             </div>
             <div class="pd-series">
 
