--- a/OmneFictio.Web/wwwroot/css/postitem.css
+++ b/OmneFictio.Web/wwwroot/css/postitem.css
@@ -41,6 +41,7 @@
   font-family: "Gudea";
 }
 .post-detail .p-header .p-menu {
+  position: relative;
   display: flex;
   align-items: center;
   height: 100%;
@@ -51,8 +52,82 @@
 .post-detail .p-header .p-menu i {
   cursor: pointer;
 }
-.post-detail .p-header .p-menu .bi-info-circle {
+.post-detail .p-header .p-menu .p-infoicon {
   font-size: 1.4rem;
+}
+.post-detail .p-header .p-menu .p-infoicon:hover + .p-info {
+  opacity: 1;
+  visibility: visible;
+}
+.post-detail .p-header .p-menu .p-info {
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s;
+  transition-delay: 0.2s;
+  position: absolute;
+  z-index: 500;
+  top: 44px;
+  right: 10px;
+  border-radius: 8px;
+  background-color: var(--background-color2);
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+.post-detail .p-header .p-menu .p-info:hover {
+  opacity: 1;
+  visibility: visible;
+}
+.post-detail .p-header .p-menu .p-info span {
+  color: #fff;
+  outline: none;
+  border: none;
+  padding: 2px 10px;
+  font-size: 0.8rem;
+  white-space: nowrap;
+}
+.post-detail .p-header .p-menu .p-info .pi-primary {
+  display: flex;
+  flex-direction: row;
+  gap: 6px 8px;
+  padding-bottom: 10px;
+  font-family: "Gudea";
+}
+.post-detail .p-header .p-menu .p-info .pi-primary span {
+  background-color: #447349;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+.post-detail .p-header .p-menu .p-info .pi-primary .pi-type {
+  background-color: #263170;
+}
+.post-detail .p-header .p-menu .p-info .pi-primary .pi-language {
+  background-color: #3e4f68;
+}
+.post-detail .p-header .p-menu .p-info .pi-tags {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 6px;
+  padding-bottom: 12px;
+}
+.post-detail .p-header .p-menu .p-info .pi-tags span {
+  background-color: rgb(103, 138, 144);
+  border-radius: 20px;
+  font-size: 0.7rem;
+  font-family: "Gudea", sans-serif;
+  padding: 1px 10px;
+}
+.post-detail .p-header .p-menu .p-info .pi-series {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 6px 8px;
+  font-family: "Gudea";
+}
+.post-detail .p-header .p-menu .p-info .pi-series span {
+  background-color: rgb(106, 38, 55);
+  border-radius: 4px;
 }
 .post-detail .p-body {
   padding: 0 14px;
@@ -134,85 +209,100 @@
   cursor: pointer;
 }
 
+/*
 .post-menu {
-  display: none;
-  flex-direction: row;
-}
-.post-menu .pd-details {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  color: #5ca264;
-}
-.post-menu .pd-details .pd-heading {
-  color: var(--text-color1);
-  font-size: 1.1rem;
-  font-family: "Josefin Sans", sans-serif;
-  font-weight: 600;
-  padding-right: 4px;
-  margin-bottom: unset;
-}
-.post-menu .pd-details .pd-value {
-  font-size: 0.9rem;
-  font-family: "Itim", cursive;
-}
-.post-menu .pd-details .pd-tags {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
-  gap: 6px;
-  font-size: 0.7rem;
-  font-family: "Gudea", sans-serif;
-}
-.post-menu .pd-details .pd-series {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
-  gap: 10px;
-  font-size: 0.9rem;
-  font-family: "Itim", cursive;
-}
-.post-menu .pd-details > * {
-  margin-bottom: 8px;
-}
-.post-menu .pd-details > *:last-child {
-  margin-bottom: unset;
-}
-.post-menu .pd-right {
-  display: flex;
-  flex-direction: column;
-  flex-shrink: 0;
-}
-.post-menu .pd-right .pd-close {
-  display: flex;
-  justify-content: end;
-  padding: 4px 10px;
-  font-size: 2rem;
-}
-.post-menu .pd-right .pd-close i {
-  cursor: pointer;
-}
-.post-menu .pd-right .pd-actions {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 4px 10px;
-}
-.post-menu .pd-right .pd-actions .pd-saved {
-  background-color: #4A8D5D !important;
-  color: #fff;
-}
-.post-menu .pd-right .pd-actions button {
-  color: var(--text-color1);
-  border-radius: 20px;
-  background-color: var(--pd-actionbtns-color);
-  outline: none;
-  border: none;
-  margin-bottom: 8px;
-  padding: 2px 10px;
-  transition: 0.2s ease;
-}
-.post-menu .pd-right .pd-actions button:hover {
-  background-color: var(--pd-actionbtns-color-hover1);
-}/*# sourceMappingURL=postitem.css.map */
+    display: none; //flex
+    flex-direction: row;
+
+    .pd-details {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        color: #5ca264;
+
+        .pd-heading {
+            color: var(--text-color1);
+            font-size: 1.1rem;
+            font-family: 'Josefin Sans', sans-serif;
+            font-weight: 600;
+            padding-right: 4px;
+            margin-bottom: unset;
+        }
+
+        .pd-value {
+            font-size: 0.9rem;
+            font-family: 'Itim', cursive;
+        }
+
+        .pd-tags {
+            display: flex;
+            flex-wrap: wrap;
+            padding: 0 4px;
+            gap: 6px;
+            font-size: 0.7rem;
+            font-family: 'Gudea', sans-serif;
+        }
+
+        .pd-series {
+            display: flex;
+            flex-wrap: wrap;
+            padding: 0 4px;
+            gap: 10px;
+            font-size: 0.9rem;
+            font-family: 'Itim', cursive;
+        }
+
+        >* {
+            margin-bottom: 8px;
+
+            &:last-child {
+                margin-bottom: unset;
+            }
+        }
+    }
+
+    .pd-right {
+        display: flex;
+        flex-direction: column;
+        flex-shrink: 0;
+
+        .pd-close {
+            display: flex;
+            justify-content: end;
+            padding: 4px 10px;
+            font-size: 2rem;
+
+            i {
+                cursor: pointer;
+            }
+        }
+
+        .pd-actions {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding: 4px 10px;
+
+            .pd-saved {
+                background-color: #4A8D5D !important;
+                color: #fff;
+            }
+
+            button {
+                color: var(--text-color1);
+                border-radius: 20px;
+                background-color: var(--pd-actionbtns-color);
+                outline: none;
+                border: none;
+                margin-bottom: 8px;
+                padding: 2px 10px;
+                transition: 0.2s ease;
+
+                &:hover {
+                    background-color: var(--pd-actionbtns-color-hover1);
+                }
+            }
+        }
+    }
+}*//*# sourceMappingURL=postitem.css.map */
