--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -704,8 +704,9 @@ header .header-wrap {
 }
 .belongs_to .usercard-onhover {
   opacity: 0;
-  transition: all 0.2s;
   visibility: hidden;
+  transition: all 0.2s;
+  transition-delay: 0.5s;
   position: absolute;
   bottom: 30px;
   right: 0;
