--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -779,11 +779,12 @@ header {
         opacity: 1;
         visibility: visible;
     }
-
+    
     .usercard-onhover {
         opacity: 0;
-        transition: all 0.2s;
         visibility: hidden;
+        transition: all 0.2s;
+        transition-delay: 0.5s;
         position: absolute;
         bottom: 30px;
         right: 0;
