--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -4,17 +4,17 @@
 @{
     ViewData["Title"] = "Read";
     @section Stylesheets {
-        <link rel="stylesheet" href="~/css/read.css" asp-append-version="true" />
-        <link rel="stylesheet" href="~/css/postitem.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/read.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/postitem.css" asp-append-version="true" />
     }
     @section Scripts {
-        <script src="~/js/read.js" asp-append-version="true" ></script>
+    <script src="~/js/read.js" asp-append-version="true"></script>
     }
 }
 @{
     string userId = "-1";
     string username = "";
-    string userPicture = "none"; 
+    string userPicture = "none";
 
     userId = User.Claims.FirstOrDefault(claim => claim.Type == "nameid")?.Value ?? "-1";
     username = User.Claims.FirstOrDefault(claim => claim.Type == "unique_name")?.Value ?? "";
@@ -27,10 +27,10 @@
             <div class="p-header">
                 <div class="p-title">
                     <a href="">
-                        
+
                     </a>
                     <span class="p-date">
-                        
+
                     </span>
                 </div>
                 <div class="p-menu">
@@ -40,20 +40,20 @@
                     <div class="p-info">
                         <div class="pi-primary">
                             <span class="pi-type">
-                                
+
                             </span>
                             <span class="pi-language">
-                                
+
                             </span>
                             <span class="pi-status">
-                                
+
                             </span>
                             <span class="pi-rating">
-                                
+
                             </span>
                         </div>
                         <div class="pi-tags">
-                            
+
                         </div>
                         <div class="pi-series">
 
@@ -76,7 +76,7 @@
                             <div class="pi-detail-column">
                                 <i class="bi bi-clock"></i>
                                 <span class="pi-last_update">
-                                    
+
                                 </span>
                             </div>
                         </div>
@@ -88,7 +88,7 @@
                     <img src="" onerror="this.onerror=null; this.closest('.p-cover').remove()">
                 </div>
                 <span>
-                    
+
                 </span>
             </div>
             <div class="p-footer">
@@ -97,19 +97,20 @@
                     <span class="p-likes vote_count">--</span>
                     <i class='bi bi-hand-thumbs-down dislikebtn' data-action='dislike' data-target_type='post'></i>
                     <span class="p-rate">
-                        
+
                     </span>
                 </div>
                 <div class="p-user belongs_to">
                     <span class="p-username">
-                        
+
                     </span>
                     <div class="usercard-onhover ucard-mode2">
                         <span class="ucard-username">MrBombastic</span>
                         <img src='/images/onerror/user_no_photo_300x300.png'>
                         <div class="ucard-part2">
                             <span class="ucard-username-mode2">MrBombastic</span>
-                            <p class="ucard-description">Hello, this is my default description. I give information here.</p>
+                            <p class="ucard-description">Hello, this is my default description. I give information here.
+                            </p>
                             <div class="ucard-stats">
                                 <div class="ucard-likes">
                                     <i class="bi bi-hand-thumbs-up"></i>
@@ -189,7 +190,8 @@
     <div class="f-body">
         @{
             string? typeQuery = Context.Request.RouteValues["Type"]!.ToString();
-            if(typeQuery == "Fanfiction" || typeQuery == "fanfiction"){
+            if (typeQuery == "Fanfiction" || typeQuery == "fanfiction")
+            {
                 <div class="f-fanfiction_settings">
                     <div class="ffs-header">
                         <button data-button="choose_series" id="fanfic-chooseseries">
@@ -198,14 +200,14 @@
                     </div>
                     <div class="ffs-series_include">
                         <!--
-                        <span data-fseries="konosuba">Konosuba<i class="bi bi-x-circle f-removeseriesbtn"></i></span>
-                        <input type="hidden" name="seriesinclude" value="konosuba"/>
-                        -->
-                    </div>
+                                <span data-fseries="konosuba">Konosuba<i class="bi bi-x-circle f-removeseriesbtn"></i></span>
+                                <input type="hidden" name="seriesinclude" value="konosuba"/>
+                                -->
+                </div>
                 </div>
             }
         }
-        
+
         <div class="f-options">
             <select name="minrate">
                 <option value="0">Min rate</option>
@@ -349,7 +351,8 @@
         <div class="nlink-cont np-readingtime">
             <a class="navlink_original" asp-controller="Home" asp-action="Read" asp-route-type="Story">Story</a>
             <a class="navlink_scenario" asp-controller="Home" asp-action="Read" asp-route-type="Scenario">Scenario</a>
-            <a class="navlink_fanfiction" asp-controller="Home" asp-action="Read" asp-route-type="Fanfiction">Fanfiction</a>
+            <a class="navlink_fanfiction" asp-controller="Home" asp-action="Read"
+                asp-route-type="Fanfiction">Fanfiction</a>
             <a class="navlink_original" asp-controller="Home" asp-action="Read" asp-route-type="Plot">Plot</a>
         </div>
         <div class="nlink-cont np-aboutyou">
@@ -383,11 +386,11 @@
     </div>
     <div class="post-list pl-masonry" id="postListSection">
         <div id="pl-column1">
-            
+
         </div>
         <div id="pl-column2">
 
         </div>
     </div>
-    
+
 </div>
