--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -71,7 +71,9 @@
                             </div>
                             <div class="pi-detail-column">
                                 <i class="bi bi-chat"></i>
-                                <span class="pi-amount_of_comments">424</span>
+                                <span class="pi-amount_of_comments">
+                                    
+                                </span>
                             </div>
                             <div class="pi-detail-column">
                                 <i class="bi bi-clock"></i>
