Getting the amount of words in chapters. Added short and long option to passed time calculation

--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -67,12 +67,14 @@
                             </div>
                             <div class="pi-detail-column">
                                 <i class="bi bi-body-text"></i>
-                                <span class="pi-amount_of_words">23414</span>
+                                <span class="pi-amount_of_words">
+                                    
+                                </span>
                             </div>
                             <div class="pi-detail-column">
                                 <i class="bi bi-chat"></i>
                                 <span class="pi-amount_of_comments">
-                                    
+
                                 </span>
                             </div>
                             <div class="pi-detail-column">
