--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -1,6 +1,4 @@
-
-
-.read-nopost{
+.read-nopost {
     display: flex;
     width: 100%;
     justify-content: center;
@@ -8,6 +6,7 @@
     color: var(--text-color1);
     font-size: 1.2rem;
     font-family: 'Josefin Sans', sans-serif;
+
     span {
         padding: 20px 40px;
         background-color: #6f2424;
@@ -16,69 +15,159 @@
     }
 }
 
-main{
+main {
     display: flex;
     flex-direction: row;
     color: var(--text-color1);
     position: relative;
 }
 
-.posts-cont{
+.posts-cont {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    .post-options{
+
+    .post-options {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
         padding: 10px;
         width: 100%;
+
         //color: var(--text-color1);
-        .po-option{
+        .po-option {
             font-size: 1.6rem;
             text-shadow: 0px 0px 6px var(--text-color-boxshadow1);
             font-family: 'Josefin Sans', sans-serif;
             cursor: pointer;
-            &:hover{
+
+            &:hover {
                 text-decoration: underline;
             }
         }
-        .po-orderby{
+
+        .po-orderby {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
             align-items: baseline;
-            .orderby-btn{
+
+            .orderby-btn {
                 margin-right: 16px;
             }
-            .orderby-value{
+
+            .orderby-value {
                 font-size: 1.2rem;
-                &:hover{
+
+                &:hover {
                     text-decoration: unset;
                 }
             }
         }
-        .po-type{
+
+        .po-type {
             margin-left: auto;
             margin-right: 36px;
         }
     }
-    .post-list{
+
+    .post-list {
         width: 100%;
         display: flex;
         align-items: flex-start;
         justify-content: space-between;
         flex-direction: column;
+
+        #pl-column1, #pl-column2{
+            width: 100%;
+        }
+    }
+}
+
+
+@keyframes pskel-loading-div{
+    0%{
+        background-color: var(--postskeleton-itemcolor-start);
+    }
+    100%{
+        background-color: var(--postskeleton-itemcolor-end);
+    }
+}
+@keyframes pskel-loading-i{
+    0%{
+        color: var(--postskeleton-itemcolor-start);
+    }
+    100%{
+        color: var(--postskeleton-itemcolor-end);
+    }
+}
+.post-skel {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+
+    div.psk-item{
+        height: 16px;
+        border-radius: 10px;
+        opacity: 0.5;
+        animation: pskel-loading-div 1s linear infinite alternate;
+    }
+    i.psk-item{
+        opacity: 0.7;
+        animation: pskel-loading-i 1s linear infinite alternate;
+    }
+
+    .pskel-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .pskel-title {
+            width: 70%;
+        }
+
+        i {
+            margin: -20px 0px;
+            font-size: 3rem;
+            display: flex;
+        }
+    }
+
+    .pskel-body {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    .pskel-footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .pskel-evaluation {
+            height: 20px;
+            width: 130px;
+        }
+
+        .pskel-uname {
+            margin-left: auto;
+            width: 100px;
+            height: 16px;
+        }
+
+        i {
+            margin-left: 16px;
+            font-size: 2rem;
+            display: flex;
+        }
     }
 }
 
 
 
-
-
-
-.nav-cont{
+.nav-cont {
     display: none;
     flex-direction: column;
     width: 200px;
@@ -86,7 +175,8 @@ main{
     flex-shrink: 0;
     font-family: 'Itim', cursive;
     color: #fff;
-    .nav-primary{
+
+    .nav-primary {
         display: flex;
         flex-direction: column;
         background-color: var(--background-color1) !important;
@@ -95,13 +185,15 @@ main{
         width: 100%;
         min-height: 140px;
         margin-bottom: 12px;
-        .nlink-cont{
+
+        .nlink-cont {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
             gap: 10px;
             padding: 6px;
-            > a{
+
+            >a {
                 padding: 4px 14px;
                 border-radius: 8px;
                 border: none;
@@ -110,20 +202,25 @@ main{
                 cursor: pointer;
             }
         }
-        .np-readingtime > a{
+
+        .np-readingtime>a {
             background-color: var(--navlink-readingtime-color);
-            &:hover{
+
+            &:hover {
                 background-color: var(--navlink-readingtime-color-hover);
             }
         }
-        .np-aboutyou > a{
+
+        .np-aboutyou>a {
             background-color: var(--navlink-aboutyou-color);
-            &:hover{
+
+            &:hover {
                 background-color: var(--navlink-aboutyou-color-hover);
             }
         }
     }
-    .nav-others{
+
+    .nav-others {
         background-color: var(--background-color1) !important;
         border-radius: 10px;
         width: 100%;
@@ -133,16 +230,20 @@ main{
         gap: 10px;
         padding: 14px;
         margin-bottom: 12px;
-        > a{
+
+        >a {
             color: var(--text-color1);
             cursor: pointer;
-            &:hover{
+
+            &:hover {
                 text-decoration: underline;
             }
         }
     }
-    .nav-ad1{
-        position: -webkit-sticky; /* Safari & IE */
+
+    .nav-ad1 {
+        position: -webkit-sticky;
+        /* Safari & IE */
         position: sticky;
         top: 20px;
         background-color: rgb(139, 136, 199);
@@ -154,7 +255,7 @@ main{
 
 
 
-.orderby-cont{
+.orderby-cont {
     display: none;
     opacity: 0;
     transition: opacity 0.3s ease;
@@ -171,18 +272,21 @@ main{
     width: 240px;
     border-radius: 20px;
     font-family: 'Itim', cursive;
-    .obt-header{
+
+    .obt-header {
         width: 100%;
         border-bottom: 2px solid var(--background-color-hover4);
         display: flex;
         flex-direction: row;
         align-items: flex-start;
-        .obt-title{
+
+        .obt-title {
             flex-grow: 1;
             padding: 6px 0 6px 16px;
             font-size: 1.6rem;
         }
-        .obt-close{
+
+        .obt-close {
             flex-shrink: 0;
             cursor: pointer;
             padding: 6px 16px 4px 12px;
@@ -190,13 +294,16 @@ main{
             text-shadow: 0px 0px 6px var(--text-color-boxshadow1);
         }
     }
-    .obt-body{
+
+    .obt-body {
         padding: 6px 50px 10px;
-        .obt-content .obt-item{
+
+        .obt-content .obt-item {
             position: relative;
             padding: 6px 0;
             font-size: 1.3rem;
-            i{
+
+            i {
                 visibility: hidden;
                 font-size: 0.9rem;
                 position: absolute;
@@ -210,7 +317,7 @@ main{
     }
 }
 
-.filter-cont{
+.filter-cont {
     display: none;
     flex-direction: column;
     opacity: 0;
@@ -229,6 +336,7 @@ main{
     font-family: 'Itim', cursive;
     overflow: hidden;
     user-select: none;
+
     /*.f-tagdd-cont{
         display: none;
         position: absolute;
@@ -239,17 +347,19 @@ main{
         z-index: 507;
         padding: 50px;
     }*/
-    .f-header{
+    .f-header {
         width: 100%;
         border-bottom: 2px solid var(--background-color-hover4);
         display: flex;
         flex-direction: row;
         align-items: flex-start;
-        .f-reset_cont{
+
+        .f-reset_cont {
             flex-grow: 1;
             padding: 12px 0 8px 14px;
             font-size: 1.3rem;
-            #f-resetbtn{
+
+            #f-resetbtn {
                 border: none;
                 outline: none;
                 background-color: rgb(168, 75, 75);
@@ -257,12 +367,14 @@ main{
                 border-radius: 8px;
                 padding: 2px 40px;
                 transition: 0.2s ease;
-                &:hover{
+
+                &:hover {
                     background-color: rgb(160, 53, 53);
                 }
             }
         }
-        .f-close{
+
+        .f-close {
             flex-shrink: 0;
             cursor: pointer;
             padding: 6px 12px;
@@ -270,18 +382,21 @@ main{
             text-shadow: 0px 0px 6px var(--text-color-boxshadow1);
         }
     }
-    .f-body{
+
+    .f-body {
         padding: 10px 12px 0;
-        .f-type_cont{
+
+        .f-type_cont {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             padding-bottom: 3px;
+
             /*span{
                 font-size: 1.4rem;
                 margin: 0 4px 7px;
             }*/
-            .f-typebtns{
+            .f-typebtns {
                 font-size: 1.1rem;
                 margin: 0 4px 7px;
                 background-color: rgb(139, 136, 199);
@@ -291,26 +406,32 @@ main{
                 border: none;
                 border-radius: 5px;
                 padding: 2px 8px;
-                &:hover{
+
+                &:hover {
                     background-color: rgb(117, 113, 191);
                 }
             }
-            .f-type_active{
+
+            .f-type_active {
                 background-color: rgb(72 139 78);
-                &:hover{
+
+                &:hover {
                     background-color: rgb(87, 140, 92);
                 }
             }
         }
-        .f-fanfiction_settings{
+
+        .f-fanfiction_settings {
             display: flex;
             flex-direction: column;
-            .ffs-header{
+
+            .ffs-header {
                 display: flex;
                 justify-content: center;
                 padding: 2px 10px 4px;
                 font-size: 1rem;
-                button{
+
+                button {
                     font-size: 1.1rem;
                     margin: 0 6px 7px;
                     background-color: rgb(139, 136, 199);
@@ -320,22 +441,26 @@ main{
                     border: none;
                     border-radius: 5px;
                     padding: 4px 8px;
+
                     &:hover {
                         background-color: rgb(117, 113, 191);
                     }
-                    i{
+
+                    i {
                         font-size: 0.9rem;
                         padding: 0 4px;
                         -webkit-text-stroke: 1px white;
                     }
                 }
             }
-            .ffs-series_include{
+
+            .ffs-series_include {
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: center;
                 margin-bottom: 10px;
-                span{
+
+                span {
                     border-radius: 12px;
                     padding: 2px 8px;
                     margin: 0 3px 4px;
@@ -346,29 +471,34 @@ main{
                     background-color: #985C30;
                     color: #fff;
 
-                    > i{
+                    >i {
                         display: flex;
                         font-size: 1.1rem;
                         margin-left: 5px;
                         cursor: pointer;
+
                         &:before {
                             background-color: #c08e8e;
                             border-radius: 50%;
                             transition: 0.1s;
                         }
-                        &:hover::before{
+
+                        &:hover::before {
                             background-color: #be2424 !important;
                         }
                     }
                 }
             }
         }
-        .f-options{
+
+        .f-options {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             gap: 6px 8px;
-            select, .f-allow18 {
+
+            select,
+            .f-allow18 {
                 outline: none;
                 border: none;
                 background: var(--background-color-hover2);
@@ -378,63 +508,76 @@ main{
                 font-size: 1.1rem;
                 cursor: pointer;
             }
-            .f-allow18{
+
+            .f-allow18 {
                 //disabled it temporarily, i can use it later
                 display: flex;
                 flex-direction: row;
-                > span{
+
+                >span {
                     padding-right: 6px;
                 }
-                > input{
+
+                >input {
                     width: 1rem;
                 }
             }
         }
-        .f-tagsbtn_cont{
+
+        .f-tagsbtn_cont {
             display: flex;
             justify-content: space-between;
             padding: 10px;
             font-size: 1.4rem;
-            input{
+
+            input {
                 border: none;
                 outline: none;
                 color: #fff;
                 border-radius: 8px;
                 padding: 2px 12px;
             }
-            button{
+
+            button {
                 border: none;
                 outline: none;
                 color: #fff;
                 border-radius: 8px;
                 padding: 2px 12px;
-                i{
+
+                i {
                     -webkit-text-stroke: 1px white;
                     padding: 0 0 0 4px;
                 }
             }
-            .f-includetag{
+
+            .f-includetag {
                 background-color: rgb(72, 139, 78);
                 transition: 0.2s ease;
-                &:hover{
+
+                &:hover {
                     background-color: rgb(58, 129, 64);
                 }
             }
-            .f-excludetag{
+
+            .f-excludetag {
                 background-color: rgb(139, 136, 199);
                 transition: 0.2s ease;
-                &:hover{
+
+                &:hover {
                     background-color: rgb(117, 113, 191);
                 }
             }
         }
-        .f-tagsincexc{
+
+        .f-tagsincexc {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             padding-bottom: 4px;
             color: #fff;
-            span{
+
+            span {
                 border-radius: 12px;
                 padding: 2px 8px;
                 margin: 0 3px 4px;
@@ -442,36 +585,43 @@ main{
                 cursor: pointer;
                 display: flex;
                 align-items: center;
-                i{
+
+                i {
                     font-size: 1.1rem;
                     margin-left: 5px;
                     cursor: pointer;
                     display: none;
+
                     &:before {
                         background-color: #be2424;
                         border-radius: 50%;
                         transition: 0.1s;
                     }
-                    &:hover::before{
+
+                    &:hover::before {
                         background-color: #be2424 !important;
                     }
                 }
             }
         }
-        .f-tags_include > span{
+
+        .f-tags_include>span {
             background-color: #5c976d;
         }
-        .f-tags_exclude > span{
+
+        .f-tags_exclude>span {
             background-color: #77749f;
         }
     }
-    .f-submit_cont{
+
+    .f-submit_cont {
         width: 100%;
         display: flex;
         justify-content: center;
         padding: 4px 0 10px;
         font-size: 1.3rem;
-        #f-submitbtn{
+
+        #f-submitbtn {
             border: none;
             outline: none;
             background-color: #33697e;
@@ -480,18 +630,21 @@ main{
             padding: 3px 30px;
             font-family: 'Kaushan Script', cursive;
             transition: 0.2s ease;
-            &:hover{
+
+            &:hover {
                 background-color: #0f546d;
             }
         }
     }
 }
-.pagination{
+
+.pagination {
     width: 100%;
     padding: 10px;
     border-radius: 8px;
     margin-top: 14px;
-    .pagination-cont{
+
+    .pagination-cont {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -499,7 +652,8 @@ main{
         margin: 0 auto;
         width: 100%;
         max-width: 400px;
-        .page_select{
+
+        .page_select {
             font-family: 'Itim', cursive;
             padding: 4px 4px 4px 10px;
             font-size: 1.2rem;
@@ -509,17 +663,19 @@ main{
             background-color: var(--background-color2);
             border-radius: 4px;
         }
-        .page_link{
+
+        .page_link {
             color: var(--text-color1);
             text-decoration: underline;
             font-family: 'Kalam', cursive;
             font-size: 1.2rem;
             padding-top: 1px;
         }
-        i{
+
+        i {
             cursor: pointer;
             font-size: 1.2rem;
-            transform: scale(.9,1.2);
+            transform: scale(.9, 1.2);
             padding-bottom: 1px;
         }
     }
@@ -527,73 +683,78 @@ main{
 
 
 // Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
-}
+@media (min-width: 576px) {}
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
-    .nav-cont{
+    .nav-cont {
         display: flex;
     }
-    .post{
+
+    .post {
         background-color: var(--background-color1) !important;
         border-radius: 10px;
     }
-    .post-options{
+
+    .post-options {
         padding: 20px 10px 10px !important;
     }
-    .obt-content .obt-item i{
+
+    .obt-content .obt-item i {
         //icon is normal after 768px
         top: 0 !important;
     }
-    .filter-cont{
+
+    .filter-cont {
         width: 340px;
     }
+
     .f-removetagbtn:before {
         background-color: #c08e8e !important;
     }
-    .pagination{
-        background-color: var(--background-color-hover4);
+
+    .pagination {
+        background-color: var(--background-color1);
     }
 }
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
-    .nav-cont{
+    .nav-cont {
         width: 240px;
     }
-    .pl-masonry{
+
+    .pl-masonry {
         flex-direction: row !important;
         gap: 1%;
-        > div {
+
+        >div {
             width: 49.5%;
         }
     }
 }
 
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
-}
+@media (min-width: 1200px) {}
 
 
 // Custom
 @media (max-width: 340px) {
-    .orderby-value{
+    .orderby-value {
         display: none;
     }
-    .po-option{
+
+    .po-option {
         font-size: 1.3rem !important;
     }
 }
 
 @media (max-width: 240px) {
-    .pagination .pagination-cont{
+    .pagination .pagination-cont {
         flex-direction: column;
         gap: 10px;
     }
 }
 
 // Max widths
-@media (max-width: 767.98px) {
-    
-}
+@media (max-width: 767.98px) {}
