--- a/OmneFictio.Web/wwwroot/css/theme.css
+++ b/OmneFictio.Web/wwwroot/css/theme.css
@@ -33,6 +33,8 @@
   --reply-bgcolor: #313131;
   --replies-bgcolor: #424242;
   --searchplaceholder-color: #939393;
+  --postskeleton-itemcolor-start: #434343;
+  --postskeleton-itemcolor-end: #686868;
 }
 
 .lightmode {
@@ -69,6 +71,8 @@
   --comment-menu-bgcolor: #e3e3e3;
   --reply-bgcolor: #dcdcdc;
   --replies-bgcolor: #cfcfcf;
+  --postskeleton-itemcolor-start: #d1d5db;
+  --postskeleton-itemcolor-end: #b9cdec;
 }
 
 /*
