--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -43,6 +43,8 @@
     //----------
 
     --searchplaceholder-color: #939393;
+    --postskeleton-itemcolor-start: #434343;
+    --postskeleton-itemcolor-end: #686868;
 }
 .lightmode{
     --background-color1: #f0f0f0;
@@ -87,6 +89,8 @@
     --replies-bgcolor: #cfcfcf;
     //----------
 
+    --postskeleton-itemcolor-start: #d1d5db;
+    --postskeleton-itemcolor-end: #b9cdec;
     //#bda952
 }
 
