posts - error messages

--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -412,6 +412,13 @@
             Filter
         </span>
     </div>
+    <div class="post-list-warnings">
+        <div id="plwarning">
+            <h1>Something went wrong.</h1>
+            <h3 class="plwarning-message"></h3>
+            <img class="plwarning-img" src="" alt="Error while fetching posts">
+        </div>
+    </div>
     <div class="post-list pl-masonry" id="postListSection">
         <div id="pl-column1">
         </div>
