settings nav restoration mobile 1

--- a/OmneFictio.Web/Views/Settings/Settings.cshtml
+++ b/OmneFictio.Web/Views/Settings/Settings.cshtml
@@ -18,13 +18,25 @@
 }
 
 <nav>
-    <ul class="">
-        <li><a href="/settings/profile">Profile</a></li>
-        <li><a href="/settings/library">Library</a></li>
-        <li><a href="/settings/friends">Friends</a></li>
-        <li><a href="/settings">Settings</a></li>
-        <li><a href="/settings/customize">Customize</a></li>
-    </ul>
+    <div class="settings-goback">
+        <a href="#">Go back</a>
+    </div>
+    <div class="settings-link_cont">
+        <div class="mobile_nav">
+            <a href="/settings/profile"><i class="bi bi-person"></i></a>
+            <a href="/settings/library"><i class="bi bi-collection"></i></a>
+            <a href="/settings/friends"><i class="bi bi-people"></i></a>
+            <a href="/settings"><i class="bi bi-gear"></i></a>
+            <a href="/settings/customize"><i class="bi bi-sliders2"></i></a>
+        </div>
+        <ul class="">
+            <li><a href="/settings/profile">Profile</a></li>
+            <li><a href="/settings/library">Library</a></li>
+            <li><a href="/settings/friends">Friends</a></li>
+            <li><a href="/settings">Settings</a></li>
+            <li><a href="/settings/customize">Customize</a></li>
+        </ul>
+    </div>
 </nav>
 <div class="settings_body">
     <div class="s-friends">
@@ -51,4 +63,7 @@
             </div>
         </div>
     </div>
+
+
+
 </div>
