--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -312,7 +312,7 @@
                         <div class="dw-icon-cont"><i class="bi bi-cart"></i></div>Shop
                     </a></li>
                 <li><a href="#">
-                        <div class="dw-icon-cont"><i class="bi bi-gear-fill"></i></div>Settings
+                        <div class="dw-icon-cont"><i class="bi bi-gear"></i></div>Settings
                     </a></li>
             </ul>
         </div>
