--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -25,6 +25,9 @@
     --navlink-aboutyou-color-hover: #6c5959;
     --navlink-others-color: #494152;
     --navlink-others-color-hover: #5f5a66;
+    --settings-activetab: #373846;
+    --postskeleton-itemcolor-start: #434343;
+    --postskeleton-itemcolor-end: #686868;
 
         //register
     --register-form-color: #404040;
@@ -40,11 +43,12 @@
     --comment-menu-bgcolor: #3b3b3b;
     --reply-bgcolor: #313131;
     --replies-bgcolor: #424242;
+        //settings
+    --goback-button: #963a3a;
+    --goback-button-hover: #a34a4a;
     //----------
 
     --searchplaceholder-color: #939393;
-    --postskeleton-itemcolor-start: #434343;
-    --postskeleton-itemcolor-end: #686868;
 }
 .lightmode{
     --background-color1: #f0f0f0;
@@ -72,6 +76,9 @@
     --navlink-aboutyou-color-hover: #8d6767;
     --navlink-others-color: #9a90a6;
     --navlink-others-color-hover: #816f96;
+    --settings-activetab: #d8dbff;
+    --postskeleton-itemcolor-start: #d1d5db;
+    --postskeleton-itemcolor-end: #b9cdec;
 
         //register
     --register-form-color: #f0f0f0;
@@ -87,10 +94,11 @@
     --comment-menu-bgcolor: #e3e3e3;
     --reply-bgcolor: #dcdcdc;
     --replies-bgcolor: #cfcfcf;
+        //settings
+    --goback-button: #ec7373;
+    --goback-button-hover: #e05050;
     //----------
 
-    --postskeleton-itemcolor-start: #d1d5db;
-    --postskeleton-itemcolor-end: #b9cdec;
     //#bda952
 }
 
